# autotools_project

./: .gitignore
autotools_project/: Makefile.am  configure.ac  configure.scan  hello.pc.in
autotools_project/include/: Makefile.am  myinclude.h
autotools_project/src/: Makefile.am  main.c
autotools_project/src/add_sub/: Makefile.am  add_sub.c
autotools_project2/: Makefile.am  configure.ac  configure.scan  hello.pc.in
autotools_project2/include/: add_sub.h
autotools_project2/src/: Makefile.am  main.c
autotools_project2/src/add_sub/: Makefile.am  add_sub.c
libusb-1.0.21/: configure.scan
libusb-1.0.21/libusb/: Makefile.am  hotplug.c
libusb-1.0.21/tests/: libusb_testlib.h  stress.c
